--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,11 @@
+click==8.3.1
+deepmerge==2.0
+gitdb==4.0.12
+GitPython==3.1.41
+Markdown==3.10
+Pygments==2.19.2
+pymdown-extensions==10.20
+PyYAML==6.0.3
+setuptools==78.1.1
+smmap==5.0.2
 zensical==0.0.15
