--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-	"name": "MkDocs Dev Container",
+	"name": "Zensical Dev Container",
 	"image": "mcr.microsoft.com/devcontainers/python:3.13",
 	"customizations": {
 	  "vscode": {
